--- a/nova-components/Lims/.gitignore
+++ b/nova-components/Lims/.gitignore
@@ -1,11 +1,8 @@
-/dist
-/.idea
+/build
 /vendor
 /node_modules
 package-lock.json
 composer.phar
 composer.lock
 phpunit.xml
-.phpunit.result.cache
-.DS_Store
-Thumbs.db
+mix-manifest.json
