--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0",
         "laravel/nova": "*",
+        "laravel/tinker": "^1.0",
+        "nathanmac/parser": "^4.3",
         "sparclex/lims": "*"
     },
     "require-dev": {
