--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,6 @@
     "/tools/status-field/js/field.js": "/tools/status-field/js/field.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/tools/data-field/js/field.js": "/tools/data-field/js/field.js"
+    "/tools/data-field/js/field.js": "/tools/data-field/js/field.js",
+    "/tools/additional-data-field/js/field.js": "/tools/additional-data-field/js/field.js"
 }
