--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "laravel-nova": "^1.0.3"
+        "laravel-nova": "^1.0.3",
+        "tailwindcss": "^0.6.5"
     }
 }
