--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "build-nova-belongsto-depend-or-create": "cd nova-components/NovaBelongstoDependOrCreate && npm run dev",
+        "build-nova-belongsto-depend-or-create-prod": "cd nova-components/NovaBelongstoDependOrCreate && npm run prod"
     },
     "devDependencies": {
         "axios": "^0.18",
@@ -18,7 +20,8 @@
         "lodash": "^4.17.5",
         "papaparse": "^4.6.0",
         "popper.js": "^1.12",
-        "vue": "^2.5.7"
+        "vue": "^2.5.7",
+        "vue-multiselect": "^2.1.0"
     },
     "dependencies": {
         "laravel-nova": "^1.0.3",
