--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "5.7.*",
         "laravel/nova": "*",
         "laravel/tinker": "^1.0",
+        "lorisleiva/laravel-deployer": "^0.2.5",
         "maatwebsite/laravel-nova-excel": "^1.0",
         "nathanmac/parser": "^4.3",
         "sparclex/select-has-many": "*",
