add nova installation to ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,8 @@ composer:
   script:
   - echo "{\"http-basic\":{\"nova.laravel.com\":{\"username\":\"$NOVA_USERNAME\",\"password\":\"$NOVA_PASSWORD\"}}}" > ~/.composer/auth.json
   - composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
+  - php artisan nova:install
+  - php artisan nova:publishg
   - cp .env.example .env
   - php artisan key:generate
   artifacts:
