run ci artisan command after env init

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,9 +32,9 @@ composer:
   script:
   - echo "{\"http-basic\":{\"nova.laravel.com\":{\"username\":\"$NOVA_USERNAME\",\"password\":\"$NOVA_PASSWORD\"}}}" > ~/.composer/auth.json
   - composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
-  - php artisan nova:install
-  - php artisan nova:publishg
   - cp .env.example .env
+  - php artisan nova:install
+  - php artisan nova:publish
   - php artisan key:generate
   artifacts:
     expire_in: 1 month
