--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^1.0",
         "maatwebsite/laravel-nova-excel": "^1.0",
         "nathanmac/parser": "^4.3",
+        "predis/predis": "^1.1",
         "sparclex/select-has-many": "*",
         "spatie/nova-backup-tool": "^1.0",
         "tightenco/nova-releases": "^0.1.2"
@@ -52,7 +53,7 @@
     "extra": {
         "laravel": {
             "dont-discover": [
-                "barryvdh/laravel-debugbar"
+
             ]
         }
     },
