--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
         "tightenco/nova-releases": "^0.1.2"
     },
     "require-dev": {
-        "lorisleiva/laravel-deployer": "^0.2.5",
-        "barryvdh/laravel-debugbar": "^3.1",
         "beyondcode/laravel-dump-server": "^1.2",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "itsgoingd/clockwork": "^3.0",
         "laracasts/generators": "^1.1",
         "laravel/dusk": "^4.0",
+        "lorisleiva/laravel-deployer": "^0.2.5",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0"
