--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "predis/predis": "^1.1",
         "sparclex/select-has-many": "*",
         "spatie/nova-backup-tool": "^1.0",
-        "tightenco/nova-releases": "^0.1.2"
+        "tightenco/nova-releases": "^0.1.2",
+        "laravel/telescope": "1.*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.2",
@@ -30,7 +31,6 @@
         "fzaninotto/faker": "^1.4",
         "laracasts/generators": "^1.1",
         "laravel/dusk": "^4.0",
-        "laravel/telescope": "^0.1.8",
         "lorisleiva/laravel-deployer": "^0.2.5",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
