--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+TELESCOPE_ENABLED=false
 
 LOG_CHANNEL=stack
 
