--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,14 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/nova": "*",
+        "laravel/telescope": "1.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/laravel-nova-excel": "^1.0",
         "nathanmac/parser": "^4.3",
         "predis/predis": "^1.1",
-        "sparclex/select-has-many": "*",
+        "reinink/advanced-eloquent": "^0.2.0",
         "spatie/nova-backup-tool": "^1.0",
-        "laravel/telescope": "1.*"
+        "titasgailius/search-relations": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.2",
@@ -79,10 +80,6 @@
         {
             "type": "composer",
             "url": "https://nova.laravel.com"
-        },
-        {
-            "type": "path",
-            "url": "./nova-components/SelectHasMany"
         }
     ]
 }
