--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "sparclex/nova-import-card": "^0.1.1",
         "spatie/nova-backup-tool": "^1.0",
         "titasgailius/search-relations": "^1.0",
-        "treestoneit/belongs-to-field": "^0.1.0"
+        "treestoneit/belongs-to-field": "^0.1.0",
+        "sparclex/LimsIntroductionCard": "*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
@@ -54,9 +55,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
@@ -82,6 +81,10 @@
         {
             "type": "composer",
             "url": "https://nova.laravel.com"
+        },
+        {
+            "type": "path",
+            "url": "./nova-components/LimsIntroductionCard"
         }
     ]
 }
