--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         "sparclex/nova-import-card": "^0.1.1",
         "spatie/nova-backup-tool": "^1.0",
         "titasgailius/search-relations": "^1.0",
-        "treestoneit/belongs-to-field": "^0.1.0",
-        "sparclex/LimsIntroductionCard": "*"
+        "treestoneit/belongs-to-field": "^0.1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
