--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/nova": "*",
         "laravel/telescope": "1.*",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "maatwebsite/laravel-nova-excel": "^1.0",
         "nathanmac/parser": "^4.3",
         "predis/predis": "^1.1",
