--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "maatwebsite/excel": "^3.1",
         "maatwebsite/laravel-nova-excel": "^1.0",
         "nathanmac/parser": "^4.3",
+        "owen-it/laravel-auditing": "^8.0",
         "predis/predis": "^1.1",
         "reinink/advanced-eloquent": "^0.2.0",
         "sparclex/nova-import-card": "^0.1.1",
