--- a/composer.json
+++ b/composer.json
@@ -15,18 +15,20 @@
         "beyondcode/laravel-dump-server": "^1.2",
         "epartment/nova-dependency-container": "^1.1",
         "fideloper/proxy": "^4.0",
+        "laravel-notification-channels/telegram": "^0.0.5",
         "laravel/framework": "5.7.*",
         "laravel/nova": "*",
         "laravel/telescope": "1.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "maatwebsite/laravel-nova-excel": "^1.0",
+        "nao-pon/flysystem-google-drive": "~1.1",
         "nathanmac/parser": "^4.3",
         "owen-it/laravel-auditing": "^8.0",
         "predis/predis": "^1.1",
         "reinink/advanced-eloquent": "^0.2.0",
         "sparclex/nova-import-card": "^1.0",
-        "spatie/nova-backup-tool": "^1.0",
+        "spatie/laravel-backup": "^6.0",
         "titasgailius/search-relations": "^1.0",
         "treestoneit/belongs-to-field": "^0.1.0"
     },
