--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "sparclex/nova-creatable-belongs-to": "^0.0.1",
         "sparclex/nova-import-card": "^1.0",
         "spatie/laravel-backup": "^6.0",
+        "spatie/laravel-collection-macros": "^4.2",
         "titasgailius/search-relations": "^1.0",
         "treestoneit/belongs-to-field": "^0.1.0"
     },
