--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "alexbowers/nova-prepopulate-searchable": "^1.0",
         "barryvdh/laravel-dompdf": "^0.8.3",
         "beyondcode/laravel-dump-server": "^1.2",
+        "doctrine/dbal": "^2.9",
         "epartment/nova-dependency-container": "^1.1",
         "fideloper/proxy": "^4.0",
         "laravel-notification-channels/telegram": "^0.0.5",
