--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "laravel-notification-channels/telegram": "^0.0.5",
         "laravel/framework": "5.8.*",
         "laravel/nova": "^2.0",
-        "laravel/telescope": "1.*",
+        "laravel/telescope": "^2.0",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "maatwebsite/laravel-nova-excel": "^1.0",
@@ -41,7 +41,7 @@
         "laracasts/generators": "^1.1",
         "lorisleiva/laravel-deployer": "^0.2.5",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
+        "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.0"
     },
     "autoload": {
