--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "build-nova-belongsto-depend-or-create": "cd nova-components/NovaBelongstoDependOrCreate && npm run dev",
-        "build-nova-belongsto-depend-or-create-prod": "cd nova-components/NovaBelongstoDependOrCreate && npm run prod",
-        "build-LimsIntroductionCard": "cd nova-components/LimsIntroductionCard && npm run dev",
-        "build-LimsIntroductionCard-prod": "cd nova-components/LimsIntroductionCard && npm run prod"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
         "axios": "^0.18",
