--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "ext-zip": "*",
         "alexbowers/nova-prepopulate-searchable": "^1.0",
+        "awesome-nova/dependent-filter": "^1.1",
         "barryvdh/laravel-dompdf": "^0.8.3",
         "beyondcode/laravel-dump-server": "^1.2",
         "doctrine/dbal": "^2.9",
