--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TELESCOPE_DB=
+TELESCOPE_DB_DATABASE=
+TELESCOPE_DB_USERNAME=
+TELESCOPE_DB_PASSWORD=
